Update environment variables for MongoDB

--- a/.env
+++ b/.env
@@ -1,5 +1,3 @@
 ﻿PORT=3000
-DB_HOST=localhost
-DB_USER=root
-DB_PASSWORD=
-DB_NAME=school_lunch_ordering
+MONGO_URI=mongodb://localhost:27017/school_lunch_ordering
+JWT_SECRET=supersecretkey21
