--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 ﻿PORT=3000
-MONGO_URI=mongodb://localhost:27017/school_lunch_ordering
+MONGO_URL=mongodb+srv://bbuser:03tiWauALmmFkLaY@cluster0.uhwas2z.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET=supersecretkey21
